--- a/Chat(teste)/MainWindow.xaml
+++ b/Chat(teste)/MainWindow.xaml
@@ -95,6 +95,9 @@
                       Grid.Row="1"
                       ItemContainerStyle="{StaticResource CartaodeContato}"/>
 
+            <StackPanel>
+                
+            </StackPanel>    
 
 
         </Grid>
