--- a/Chat(teste)/App.xaml
+++ b/Chat(teste)/App.xaml
@@ -7,6 +7,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="./Themes/CartaodeContatos.xaml"/>
+                <ResourceDictionary Source="./Themes/ChatItem.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
