--- a/Chat(teste)/MainWindow.xaml
+++ b/Chat(teste)/MainWindow.xaml
@@ -95,13 +95,108 @@
                       Grid.Row="1"
                       ItemContainerStyle="{StaticResource CartaodeContato}"/>
 
-            <StackPanel>
+            <StackPanel Grid.Row="2"
+                        Orientation="Horizontal"
+                        Background="#292b2f">
                 
+                <Border CornerRadius="25"
+                        Width="30" Height="30"
+                        Background="#2bff6f"
+                        Margin="18,0,0,0"/>
+
+                <StackPanel VerticalAlignment="Center">
+                    <Label Content="NomeUsuario"
+                           Foreground="White"
+                           FontWeight="SemiBold"
+                           Margin="0,-5,0,-5"/>
+                    <Label Content="Status"
+                           Foreground="Gray"
+                           FontWeight="SemiBold"
+                           FontSize="10"
+                           Margin="0,-8,0,-5"/>
+                </StackPanel>
+
             </StackPanel>    
 
 
         </Grid>
 
+
+        <Grid Grid.Column="1"
+              Grid.Row="1">
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50"/>
+                <RowDefinition/>
+                <RowDefinition Height="70"/>
+            </Grid.RowDefinitions>
+
+            <Border BorderBrush="#2f3136"
+                    BorderThickness="0,0,0,2">
+                <Grid HorizontalAlignment="Stretch"
+                      Margin="8">
+
+                    <Label Content="@NomeUsuario"
+                           Foreground="White"
+                           FontWeight="Bold"
+                           Margin="5,0,5,0"
+                           VerticalAlignment="Center"/>
+
+                    <StackPanel Orientation="Horizontal"
+                                HorizontalAlignment="Right">
+
+                        <Image Width="25" Height="25"
+                               RenderOptions.BitmapScalingMode="Fant"
+                               Margin="5,0,5,0"
+                               Source="./Icons/Phone.png"/>
+                        <Image Width="25" Height="25"
+                               RenderOptions.BitmapScalingMode="Fant"
+                               Margin="5,0,5,0"
+                               Source="./Icons/Camera.png"/>
+
+                    </StackPanel>
+
+                </Grid>
+            </Border>
+
+            <ListView ItemsSource="{Binding ContatoSelecionado.Menssagens}"
+                      Background="Transparent"
+                      BorderThickness="0"
+                      ItemContainerStyle="{StaticResource ChatItem }"
+                      Margin="8,0,0,0"
+                      Grid.Row="1"/>
+
+            <Grid Grid.Row="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition Width="90"/>
+                </Grid.ColumnDefinitions>
+
+                <TextBox Grid.Row="1"
+                         Height="50"
+                         Text="Menssagem @NomeUsuario"
+                         Style="{StaticResource CaixaMenssagem}"
+                         Grid.ColumnSpan="2"/>
+
+                <StackPanel Orientation="Horizontal"
+                            HorizontalAlignment="Right"
+                            Grid.Column="1"
+                            Margin="0,0,16,0">
+
+                    <Image Source="./Icons/Plus.png"
+                           Width="25" Height="25"
+                           RenderOptions.BitmapScalingMode="Fant"
+                           Margin="5,5,5,0"/>
+                    
+                    <Image Source="./Icons/Send.png"
+                           Width="25" Height="25"
+                           RenderOptions.BitmapScalingMode="Fant"
+                           Margin="5,5,16,0"/>
+
+                </StackPanel>
+            </Grid>
+
+        </Grid>
 
     </Grid>
 </Window>
