--- a/Chat(teste)/App.xaml
+++ b/Chat(teste)/App.xaml
@@ -8,7 +8,8 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="./Themes/CartaodeContatos.xaml"/>
                 <ResourceDictionary Source="./Themes/ChatItem.xaml"/>
-            </ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="./Themes/CaixaMenssagem.xaml"/>
+                </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
